--- a/docs/谷粒商城—分布式基础.md
+++ b/docs/谷粒商城—分布式基础.md
@@ -324,13 +324,15 @@ docker.io/library/redis:latest
 
 启动docker
 
+
+
 ```shell
 [root@hadoop-104 ~]# mkdir -p /mydata/redis/conf
 [root@hadoop-104 ~]# touch /mydata/redis/conf/redis.conf
 [root@hadoop-104 ~]# echo "appendonly yes"  >> /mydata/redis/conf/redis.conf
 [root@hadoop-104 ~]# docker run -p 6379:6379 --name redis -v /mydata/redis/data:/data \
-> -v /mydata/redis/conf/redis.conf:/etc/redis/redis.conf \
-> -d redis redis-server /etc/redis/redis.conf
+ -v /mydata/redis/conf/redis.conf:/etc/redis/redis.conf \
+ -d redis redis-server /etc/redis/redis.conf
 ce7ae709711986e3f90c9278b284fe6f51f1c1102ba05f3692f0e934ceca1565
 [root@hadoop-104 ~]# 
 ```
